--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </ul>
     <p>Recipies</p>
     <ol>
-        <li><a href="../recipies/recipie1.html">Biriyani</a></li>
-        <li><a href="../recipies/recipie2.html">Sandwich</a></li>
-        <li><a href="../recipies/recipie3.html">Masala Dosa</a></li>
+        <li><a href="./recipie1.html">Biriyani</a></li>
+        <li><a href="./recipie2.html">Sandwich</a></li>
+        <li><a href="./recipie3.html">Masala Dosa</a></li>
     </ol>
 </body>
 </html>
