--- a/recipie2.html
+++ b/recipie2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Sandwich</h1>
-    <img src="https://images.app.goo.gl/UxdWW81XryMDQQLF7" alt="veg sandwich on plate">
+<img src="./sandwich img.jpg" alt="Veg sandwich on plate"  height="200" width="200">
     <p>Description</p>
     <ul>
         <li>Quick, tasty, and customizable — a sandwich is perfect for breakfast, lunch, or a snack.</li>
