--- a/recipie3.html
+++ b/recipie3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Masala Dosa</h1>
-    <img src="https://images.app.goo.gl/ShTdNjKyfBeXNnQ26" alt="crispy masala dosa on a plate">
+    <img src="./dosa.jpeg" alt="crispy masala dosa on a plate" height="200" width="200">
     
     <p>Description</p>
     <ul>
