--- a/recipie1.html
+++ b/recipie1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Biriyani</h1>
-    <img src="https://images.app.goo.gl/wHr69fgbDK2STmMv9" alt="veg biriyani in bowl">
+    <img src="./briyani.jpg" alt="veg biriyani in bowl">
     <p>Description</p>
     <ul>
         <li>Fragrant basmati rice cooked with mixed vegetables, spices, and herbs. A celebration dish that tastes even better the next day.</li>
